--- a/IapExample/package.json
+++ b/IapExample/package.json
@@ -10,10 +10,15 @@
     "lint": "eslint index.js"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
     "apsl-react-native-button": "3.1.1",
+    "axios": "^0.27.2",
     "react": "17.0.1",
     "react-native": "0.65.1",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-iap": "7.5.1",
+    "react-native-safe-area-context": "^4.3.1",
     "react-navigation": "4.4.4"
   },
   "devDependencies": {
