--- a/IapExample/android/app/src/main/AndroidManifest.xml
+++ b/IapExample/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.iapexample">
+  package="com.iap.appabcxyz">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
