--- a/IapExample/package.json
+++ b/IapExample/package.json
@@ -18,7 +18,10 @@
     "react-native": "0.65.1",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-iap": "7.5.1",
+    "react-native-media-controls": "^2.3.0",
     "react-native-safe-area-context": "^4.3.1",
+    "react-native-slider": "^0.11.0",
+    "react-native-track-player": "2.1.2",
     "react-navigation": "4.4.4"
   },
   "devDependencies": {
